unpackaged/main/default/objects/Crisis_Details__c/Crisis_Details__c.object-meta.xml
<CustomObject>
    <label>Crisis Details</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Crisis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crisis Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>