unpackaged/main/default/objects/Crisis_Details__c/fields/Crisis_Number__c.field-meta.xml
<CustomField>
    <fullName>Crisis_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Crisis Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>