unpackaged/main/default/objects/Crisis_Details__c/fields/Crisis_Type__c.field-meta.xml
<CustomField>
    <fullName>Crisis_Type__c</fullName>
    <label>Crisis Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drowning</fullName>
            </value>
            <value>
                <fullName>Construction Disaster</fullName>
            </value>
            <value>
                <fullName>Construction Accident</fullName>
            </value>
            <value>
                <fullName>Slip &amp; Fall</fullName>
            </value>
            <value>
                <fullName>Terrorism</fullName>
            </value>
            <value>
                <fullName>Armed Robbery</fullName>
            </value>
            <value>
                <fullName>Shooting</fullName>
            </value>
            <value>
                <fullName>Fight</fullName>
            </value>
            <value>
                <fullName>Suspicious Package</fullName>
            </value>
            <value>
                <fullName>Bomb Threat</fullName>
            </value>
            <value>
                <fullName>Food Tampering</fullName>
            </value>
            <value>
                <fullName>Hostage situation</fullName>
            </value>
            <value>
                <fullName>Workplace Violence</fullName>
            </value>
            <value>
                <fullName>Discrimination</fullName>
            </value>
            <value>
                <fullName>Sexual Harassment</fullName>
            </value>
            <value>
                <fullName>Food Poisoning/Food Contamination</fullName>
            </value>
            <value>
                <fullName>Board of Health</fullName>
            </value>
            <value>
                <fullName>Health Related</fullName>
            </value>
            <value>
                <fullName>Health Department</fullName>
            </value>
            <value>
                <fullName>Suicide Call</fullName>
            </value>
            <value>
                <fullName>Death on Site</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Natural Disaster</fullName>
            </value>
            <value>
                <fullName>Explosion</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>