unpackaged/main/default/objects/Crisis_Details__c/fields/Sharepoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sharepoint URL</label>
    <type>Url</type>
</CustomField>