unpackaged/main/default/objects/Crisis_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Crisis_Number__c</columns>
    <columns>Crisis_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>